# axio

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: Settings.cmake
src/: CMakeLists.txt
src/axio/base/: arch.hpp  compiler.hpp  endianness.hpp  macros.hpp  os.hpp  type_traits.hpp  types.hpp
src/axio/container/: array.hpp  compressed_tuple.hpp  tuple.hpp  vector.hpp
src/axio/container/detail/: allocator_holder.hpp  iterator_traits.hpp  tuple_fwd.hpp
src/axio/container/internal/: tuple_fwd.hpp
src/axio/memory/: allocator.hpp
src/axio/string/: axio_repr.hpp  buffer.hpp  char_traits.hpp  string.hpp  string_utils.hpp
src/axio/string/internal/: buffer.hpp  number_conversion.hpp
src/axio/utility/: forward.hpp  move.hpp
test/: CMakeLists.txt
test/base/: arch.cpp  compiler.cpp  macros.cpp  os.cpp  type_traits.cpp  types.cpp
test/container/: array.cpp  compressed_tuple.cpp  tuple.cpp  vector.cpp
test/memory/: allocator.cpp
test/string/: axio_repr.cpp  number_conversion.cpp  string.cpp  string_utils.cpp  u16string.cpp  u32string.cpp  u8string.cpp  wstring.cpp
test/string/template/: string_test.hpp
test/utility/: forward.cpp  move.cpp
